--- a/Portal2Boards.Net.Test/index.html
+++ b/Portal2Boards.Net.Test/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Portal2Records</title>
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-<style>table,td,th{border-collapse:collapse;border:1px solid #ddd;text-align: left;}table.wrs{width:50%;}table.wrholders{width:10%;}th,td{padding: 1px;}</style>
+<style>table,td,th{border-collapse:collapse;border:1px solid #ddd;text-align: left;}table.wrs{width:50%;}table.wrholders{width:20%;}th,td{padding: 1px;}</style>
 </head>
 <body style="font-family: 'Roboto', sans-serif; ">
 <div>
@@ -19,6 +19,24 @@
 <th>Video</th>
 </tr></thead>
 <tbody>
+<tr>
+<td rowspan="1" align="center"><a href="https://board.iverb.me/chamber/62761" title="sp_a1_intro1">Container Ride</a>*</td>
+<td rowspan="1">5:45.83</td>
+<td><a href="https://board.iverb.me/profile/76561198039230536">Zypeh</a></td>
+<td>2014-08-26</td>
+<td>997</td>
+<td><a href="https://board.iverb.me/getDemo?id=22967">Download</a></td>
+<td><a href="https://youtu.be/GLO07f2PbQM?start=0">Watch</a></td>
+</tr>
+<tr>
+<td rowspan="1" align="center"><a href="https://board.iverb.me/chamber/62758" title="sp_a1_intro2">Portal Carousel</a>*</td>
+<td rowspan="1">24.96</td>
+<td><a href="https://board.iverb.me/profile/76561198039230536">Zypeh</a></td>
+<td>2016-09-14</td>
+<td>247</td>
+<td><a href="https://board.iverb.me/getDemo?id=53517">Download</a></td>
+<td><a href="https://youtu.be/ewl3FfelEW4?start=0">Watch</a></td>
+</tr>
 <tr>
 <td rowspan="1" align="center"><a href="https://board.iverb.me/chamber/47458" title="sp_a1_intro3">Portal Gun</a></td>
 <td rowspan="1">23.65</td>
@@ -56,6 +74,24 @@
 <td><a href="https://youtu.be/ppT8Y4_hyJY?start=0">Watch</a></td>
 </tr>
 <tr>
+<td rowspan="1" align="center"><a href="https://board.iverb.me/chamber/62763" title="sp_a1_intro7">Secret Panel</a>*</td>
+<td rowspan="1">1:10.33</td>
+<td><a href="https://board.iverb.me/profile/76561198039230536">Zypeh</a></td>
+<td>2017-01-06</td>
+<td>133</td>
+<td><a href="https://board.iverb.me/getDemo?id=59343">Download</a></td>
+<td></td>
+</tr>
+<tr>
+<td rowspan="1" align="center"><a href="https://board.iverb.me/chamber/62759" title="sp_a1_wakeup">Wakeup</a>*</td>
+<td rowspan="1">2:50.50</td>
+<td><a href="https://board.iverb.me/profile/76561198039230536">Zypeh</a></td>
+<td>2017-01-29</td>
+<td>110</td>
+<td><a href="https://board.iverb.me/getDemo?id=60776">Download</a></td>
+<td></td>
+</tr>
+<tr>
 <td rowspan="1" align="center"><a href="https://board.iverb.me/chamber/47735" title="sp_a2_intro">Incinerator</a></td>
 <td rowspan="1">37.08</td>
 <td><a href="https://board.iverb.me/profile/76561198039230536">Zypeh</a></td>
@@ -63,6 +99,15 @@
 <td>266</td>
 <td><a href="https://board.iverb.me/getDemo?id=52104">Download</a></td>
 <td><a href="https://youtu.be/o5aKnG-cALk?start=0">Watch</a></td>
+</tr>
+<tr>
+<td rowspan="1" align="center"><a href="https://board.iverb.me/chamber/62765" title="sp_a2_laser_intro">Laser Intro</a>*</td>
+<td rowspan="1">19.03</td>
+<td><a href="https://board.iverb.me/profile/76561198039230536">Zypeh</a></td>
+<td>2016-09-02</td>
+<td>259</td>
+<td><a href="https://board.iverb.me/getDemo?id=52612">Download</a></td>
+<td><a href="https://youtu.be/sPH8SrHWezY?start=0">Watch</a></td>
 </tr>
 <tr>
 <td rowspan="1" align="center"><a href="https://board.iverb.me/chamber/47736" title="sp_a2_laser_stairs">Laser Stairs</a></td>
@@ -78,7 +123,7 @@
 <td rowspan="1">11.38</td>
 <td><a href="https://board.iverb.me/profile/76561198039230536">Zypeh</a></td>
 <td>2017-02-03</td>
-<td>105</td>
+<td>106</td>
 <td><a href="https://board.iverb.me/getDemo?id=61009">Download</a></td>
 <td><a href="https://youtu.be/OzTsZt0Sxoo?start=0">Watch</a></td>
 </tr>
@@ -90,6 +135,15 @@
 <td>219</td>
 <td><a href="https://board.iverb.me/getDemo?id=56169">Download</a></td>
 <td><a href="https://youtu.be/ZrUX2Evi2Zo?start=0">Watch</a></td>
+</tr>
+<tr>
+<td rowspan="1" align="center"><a href="https://board.iverb.me/chamber/62767" title="sp_a2_catapult_intro">Catapult Intro</a>*</td>
+<td rowspan="1">29.26</td>
+<td><a href="https://board.iverb.me/profile/76561198039230536">Zypeh</a></td>
+<td>2016-10-24</td>
+<td>207</td>
+<td><a href="https://board.iverb.me/getDemo?id=56854">Download</a></td>
+<td><a href="https://youtu.be/kk4kWe5ecGc?start=0">Watch</a></td>
 </tr>
 <tr>
 <td rowspan="1" align="center"><a href="https://board.iverb.me/chamber/47744" title="sp_a2_trust_fling">Trust Fling</a></td>
@@ -272,6 +326,15 @@
 <td><a href="https://youtu.be/gY9Zm8SwKTQ?start=0">Watch</a></td>
 </tr>
 <tr>
+<td rowspan="1" align="center"><a href="https://board.iverb.me/chamber/62771" title="sp_a2_core">Core</a>*</td>
+<td rowspan="1">3:37.83</td>
+<td><a href="https://board.iverb.me/profile/76561198003223063">PerOculos</a></td>
+<td>2014-10-28</td>
+<td>934</td>
+<td></td>
+<td><a href="https://youtu.be/T1S3ZGGlFjw?start=0">Watch</a></td>
+</tr>
+<tr>
 <td rowspan="1" align="center"><a href="https://board.iverb.me/chamber/47783" title="sp_a3_01">Underground</a></td>
 <td rowspan="1">1:04.61</td>
 <td><a href="https://board.iverb.me/profile/76561198039230536">Zypeh</a></td>
@@ -285,7 +348,7 @@
 <td rowspan="1">21.95</td>
 <td><a href="https://board.iverb.me/profile/76561198039230536">Zypeh</a></td>
 <td>2017-02-15</td>
-<td>92</td>
+<td>93</td>
 <td><a href="https://board.iverb.me/getDemo?id=61764">Download</a></td>
 <td><a href="https://youtu.be/8wi3ZT7ohcU?start=0">Watch</a></td>
 </tr>
@@ -294,7 +357,7 @@
 <td rowspan="1">39.76</td>
 <td><a href="https://board.iverb.me/profile/76561198003223063">PerOculos</a></td>
 <td>2015-10-25</td>
-<td>572</td>
+<td>573</td>
 <td><a href="https://board.iverb.me/getDemo?id=8960">Download</a></td>
 <td><a href="https://youtu.be/-5lWT9XinB0?start=0">Watch</a></td>
 </tr>
@@ -362,6 +425,15 @@
 <td></td>
 </tr>
 <tr>
+<td rowspan="1" align="center"><a href="https://board.iverb.me/chamber/88350" title="sp_a4_intro">Test</a>*</td>
+<td rowspan="1">1:39.23</td>
+<td><a href="https://board.iverb.me/profile/76561198039230536">Zypeh</a></td>
+<td>2016-09-02</td>
+<td>259</td>
+<td><a href="https://board.iverb.me/getDemo?id=52615">Download</a></td>
+<td></td>
+</tr>
+<tr>
 <td rowspan="1" align="center"><a href="https://board.iverb.me/chamber/47800" title="sp_a4_tb_intro">Funnel Intro</a></td>
 <td rowspan="1">13.88</td>
 <td><a href="https://board.iverb.me/profile/76561198039230536">Zypeh</a></td>
@@ -393,7 +465,7 @@
 <td rowspan="1">14.65</td>
 <td><a href="https://board.iverb.me/profile/76561198039230536">Zypeh</a></td>
 <td>2017-04-12</td>
-<td>37</td>
+<td>38</td>
 <td><a href="https://board.iverb.me/getDemo?id=65354">Download</a></td>
 <td><a href="https://youtu.be/t-Zp3KpQv9k?start=0">Watch</a></td>
 </tr>
@@ -427,7 +499,7 @@
 <td rowspan="1">12.73</td>
 <td><a href="https://board.iverb.me/profile/76561198048179892">Betsruner</a></td>
 <td>2016-03-15</td>
-<td>430</td>
+<td>431</td>
 <td></td>
 <td><a href="https://youtu.be/l2AnQ0qMP3M?start=0">Watch</a></td>
 </tr>
@@ -452,7 +524,7 @@
 <tr>
 <td><a href="https://board.iverb.me/profile/76561198043899549">Jetwash_787</a></td>
 <td>2015-06-03</td>
-<td>716</td>
+<td>717</td>
 <td></td>
 <td></td>
 </tr>
@@ -470,6 +542,15 @@
 <td>2017-02-06</td>
 <td>102</td>
 <td></td>
+<td></td>
+</tr>
+<tr>
+<td rowspan="1" align="center"><a href="https://board.iverb.me/chamber/62776" title="sp_a4_finale1">Finale 1</a>*</td>
+<td rowspan="1">1:17.29</td>
+<td><a href="https://board.iverb.me/profile/76561198039230536">Zypeh</a></td>
+<td>2016-08-01</td>
+<td>291</td>
+<td><a href="https://board.iverb.me/getDemo?id=22896">Download</a></td>
 <td></td>
 </tr>
 <tr>
@@ -500,60 +581,131 @@
 <td></td>
 </tr>
 <tr>
-<td><b>Total</b></td>
+<td><b>Official Total</b></td>
 <td><b>26:23.81</b></td>
+</tr>
+<tr>
+<td><b>Total</b></td>
+<td><b>43:58.07</b></td>
 </tr>
 </tbody>
 </table>
 </div>
 <div>
-<br><h3 align="center">World Record Holders</h3>
+<br><h3 align="center">Official World Record Holders</h3>
 <table align="center" class="wrholders">
 <thead><tr>
 <th>Player</th>
-<th>WRs</th>
+<th>Official</th>
+<th>Total</th>
 </tr></thead>
 <tbody>
 <tr>
 <td><a href="https://board.iverb.me/profile/76561198039230536">Zypeh</a></td>
 <td>38</td>
+<td>46</td>
 </tr>
 <tr>
 <td><a href="https://board.iverb.me/profile/76561198051118260">Delt0s</a></td>
+<td>5</td>
 <td>5</td>
 </tr>
 <tr>
 <td><a href="https://board.iverb.me/profile/76561198048636382">Msushi</a></td>
 <td>3</td>
+<td>3</td>
 </tr>
 <tr>
 <td><a href="https://board.iverb.me/profile/76561198003223063">PerOculos</a></td>
 <td>2</td>
+<td>3</td>
 </tr>
 <tr>
 <td><a href="https://board.iverb.me/profile/76561198048179892">Betsruner</a></td>
+<td>2</td>
 <td>2</td>
 </tr>
 <tr>
 <td><a href="https://board.iverb.me/profile/76561198066574904">Szeibertle</a></td>
 <td>1</td>
+<td>1</td>
 </tr>
 <tr>
 <td><a href="https://board.iverb.me/profile/76561198076464170">Kess</a></td>
+<td>1</td>
 <td>1</td>
 </tr>
 <tr>
 <td><a href="https://board.iverb.me/profile/76561198043899549">Jetwash_787</a></td>
 <td>1</td>
+<td>1</td>
 </tr>
 <tr>
 <td><a href="https://board.iverb.me/profile/76561198045034733">Undead</a></td>
+<td>1</td>
 <td>1</td>
 </tr>
 </tbody>
 </table>
 </div>
-<br>Generated page in 23.827 seconds.
+<div>
+<br><h3 align="center">Official Duration</h3>
+<table align="center" class="wrholders">
+<thead><tr>
+<th>Player</th>
+<th>Official</th>
+<th>Total</th>
+</tr></thead>
+<tbody>
+<tr>
+<td><a href="https://board.iverb.me/profile/76561198039230536">Zypeh</a></td>
+<td>8765</td>
+<td>11268</td>
+</tr>
+<tr>
+<td><a href="https://board.iverb.me/profile/76561198003223063">PerOculos</a></td>
+<td>1290</td>
+<td>2224</td>
+</tr>
+<tr>
+<td><a href="https://board.iverb.me/profile/76561198051118260">Delt0s</a></td>
+<td>1254</td>
+<td>1254</td>
+</tr>
+<tr>
+<td><a href="https://board.iverb.me/profile/76561198066574904">Szeibertle</a></td>
+<td>840</td>
+<td>840</td>
+</tr>
+<tr>
+<td><a href="https://board.iverb.me/profile/76561198043899549">Jetwash_787</a></td>
+<td>717</td>
+<td>717</td>
+</tr>
+<tr>
+<td><a href="https://board.iverb.me/profile/76561198048179892">Betsruner</a></td>
+<td>533</td>
+<td>533</td>
+</tr>
+<tr>
+<td><a href="https://board.iverb.me/profile/76561198048636382">Msushi</a></td>
+<td>126</td>
+<td>126</td>
+</tr>
+<tr>
+<td><a href="https://board.iverb.me/profile/76561198045034733">Undead</a></td>
+<td>36</td>
+<td>36</td>
+</tr>
+<tr>
+<td><a href="https://board.iverb.me/profile/76561198076464170">Kess</a></td>
+<td>1</td>
+<td>1</td>
+</tr>
+</tbody>
+</table>
+</div>
+<br>Generated page in 17.364 seconds.
 <br><a href="https://github.com/NeKzor/Portal2Boards.Net">Portal2Boards.Net</a> example made by NeKz.
 </body>
 </html>
